--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc --build",
     "start": "node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --silent",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./jest-e2e.json"
   },
   "repository": {
     "type": "git",
@@ -21,15 +25,20 @@
   },
   "homepage": "https://github.com/nathanwkwong/node-ts-banking#readme",
   "dependencies": {
+    "@types/jest": "^29.5.13",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
+    "ts-jest": "^29.2.5",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
+    "@types/supertest": "^6.0.2",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
