--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/nathanwkwong/node-ts-banking#readme",
   "dependencies": {
     "@types/jest": "^29.5.13",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jest": "^29.7.0",
     "pg": "^8.13.0",
