--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,24 @@
         "sourceMap": true,
         "outDir": "dist",
         "strict": true,
-        "lib": ["esnext"],
-        "esModuleInterop": true
+        "lib": ["es5", "es6", "dom"],
+        "target": "ES2021",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true,
+        "declaration": true,
+        "removeComments": true,
+
+        "incremental": true,
+        "skipLibCheck": true,
+        "strictNullChecks": false,
+        "noImplicitAny": false,
+        "strictBindCallApply": false,
+        "forceConsistentCasingInFileNames": false,
+        "noFallthroughCasesInSwitch": false
     },
     "include": ["src/**/*"]
 }
