--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./jest-e2e.json"
+    "test:e2e": "jest --config ./jest-e2e.json",
+    "migration:create": "npx typeorm-ts-node-esm migration:create src/migrations/migration",
+    "migration:gen": "npx typeorm-ts-node-esm migration:generate src/migrations/migration -d src/config/database"
   },
   "repository": {
     "type": "git",
