--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./jest-e2e.json",
-    "migration:create": "npx typeorm-ts-node-esm migration:create src/migrations/migration",
-    "migration:gen": "npx typeorm-ts-node-esm migration:generate src/migrations/migration -d src/config/database"
+    "typeorm": "typeorm-ts-node-esm",
+    "migrate:gen": "typeorm-ts-node-esm migration:generate src/migrations/migration -d src/config/database.ts",
+    "migrate:up": "typeorm-ts-node-esm migration:run -d src/config/database.ts",
+    "migrate:genUp": "npm run migrate:gen && npm run migrate:up",
+    "migrate:revert": "typeorm-ts-node-esm migration:revert -d src/config/database.ts",
+    "migrate:drop": "typeorm-ts-node-esm schema:drop -d src/config/database.ts && rm -R src/migrations"
   },
   "repository": {
     "type": "git",
