--- a/package.json
+++ b/package.json
@@ -31,22 +31,27 @@
   },
   "homepage": "https://github.com/nathanwkwong/node-ts-banking#readme",
   "dependencies": {
-    "@types/jest": "^29.5.13",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "jest": "^29.7.0",
-    "pg": "^8.13.0",
-    "reflect-metadata": "^0.2.2",
-    "ts-jest": "^29.2.5",
-    "typeorm": "^0.3.20"
+    "@types/jest": "29.5.13",
+    "dotenv": "16.4.5",
+    "express": "4.21.1",
+    "jest": "29.7.0",
+    "pg": "8.13.0",
+    "reflect-metadata": "0.2.2",
+    "ts-jest": "29.2.5",
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.7.5",
-    "@types/supertest": "^6.0.2",
-    "nodemon": "^3.1.7",
-    "supertest": "^7.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "@types/express": "5.0.0",
+    "@types/node": "22.7.5",
+    "@types/supertest": "6.0.2",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "husky": "9.1.6",
+    "lint-staged": "15.2.10",
+    "nodemon": "3.1.7",
+    "prettier": "3.3.3",
+    "supertest": "7.0.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.3"
   }
 }
