--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "typeorm": "0.3.20"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/eslint__js": "^8.42.3",
+    "@eslint/js": "9.13.0",
+    "@types/eslint__js": "8.42.3",
     "@types/express": "5.0.0",
     "@types/node": "22.7.5",
     "@types/supertest": "6.0.2",
-    "eslint": "^9.13.0",
+    "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.0.0",
     "husky": "9.1.6",
@@ -62,7 +62,7 @@
     "prettier": "3.3.3",
     "supertest": "7.0.0",
     "ts-node": "10.9.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.10.0"
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.10.0"
   }
 }
