--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc --build",
     "start": "node dist/app.js",
-    "test": "jest --silent",
+    "test": "jest --silent --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
