--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "pg": "8.13.0",
     "reflect-metadata": "0.2.2",
     "ts-jest": "29.2.5",
-    "typeorm": "0.3.20"
+    "typeorm": "0.3.20",
+    "winston": "3.15.0"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
