--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,27 @@ services:
   # ####################################################################
   # # API backend service                                              #
   # ####################################################################
-  # banking-api:
-  #     container_name: banking-api
-  #     restart: always
-  #     build:
-  #         context: .
-  #         dockerfile: ./Dockerfile
-  #         target: development
-  #     ports:
-  #         - 3000:3000
-  #     volumnes::
-  #         - '/app/node_modules'
-  #         - '.:/usr/src/app'
-  #     env_file:
-  #         - .env
+  banking-api:
+    depends_on:
+      - postgres
+    container_name: banking-api
+    restart: always
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+      # target: development
+    volumes:
+      # - '/app/node_modules'
+      # - '.:/usr/src/app'
+      - banking-api:/usr/src/app
+    env_file:
+      - .env
+    expose:
+      - 3000
+    ports:
+      - 3000:3000
+    networks:
+      - banking-network
   #     user: node
   ####################################################################
   # PostgreSQL database                                              #
@@ -32,5 +39,11 @@ services:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_PASSWORD=${DB_PASS}
       - POSTGRES_USER=${DB_USER}
+    networks:
+      - banking-network
+networks:
+  banking-network:
+    driver: bridge
 volumes:
   db:
+  banking-api:
