--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "reflect-metadata": "0.2.2",
     "ts-jest": "29.2.5",
     "typeorm": "0.3.20",
-    "winston": "3.15.0"
+    "winston": "3.15.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
