--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
+    "@testcontainers/postgresql": "10.13.2",
     "@types/eslint__js": "8.42.3",
     "@types/express": "5.0.0",
     "@types/node": "22.7.5",
+    "@types/pg": "8.11.10",
     "@types/supertest": "6.0.2",
     "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
