test: add jest test on pre-commit hook

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc --build",
     "start": "node dist/app.js",
-    "test": "jest --silent --detectOpenHandles --no-cache --watchAll",
+    "test": "jest --silent --no-cache --config='./jest.config.ts' --forceExit",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:coverage": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./jest-e2e.json",
     "typeorm": "typeorm-ts-node-esm",
