--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,6 @@
 version: '3.9'
 
 services:
-  # ####################################################################
-  # # API backend service                                              #
-  # ####################################################################
-  banking-api:
-    depends_on:
-      - postgres
-    container_name: banking-api
-    restart: always
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-      # target: development
-    volumes:
-      # - '/app/node_modules'
-      # - '.:/usr/src/app'
-      - banking-api:/usr/src/app
-    env_file:
-      - .env
-    expose:
-      - 3000
-    ports:
-      - 3000:3000
-    networks:
-      - banking-network
-  #     user: node
   ####################################################################
   # PostgreSQL database                                              #
   ####################################################################
@@ -41,6 +16,66 @@ services:
       - POSTGRES_USER=${DB_USER}
     networks:
       - banking-network
+  # ####################################################################
+  # # API backend service                                              #
+  # ####################################################################
+  banking-api:
+    depends_on:
+      - postgres
+    container_name: banking-api
+    restart: always
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    volumes:
+      # - '/app/node_modules'
+      # - '.:/usr/src/app'
+      - banking-api:/usr/src/app
+    env_file:
+      - .env
+    expose:
+      - 3000
+    ports:
+      - 3000:3000
+    networks:
+      - banking-network
+  ####################################################################
+  # CAdvisor database                                              #
+  ####################################################################
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    restart: always
+    ports:
+      - 8080:8080
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    devices:
+      - /dev/kmsg:/dev/kmsg
+    depends_on:
+      - banking-api
+  ####################################################################
+  # Prometheus database                                              #
+  ####################################################################
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: always
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+      - ./src/config/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - 9090:9090
+    depends_on:
+      - cadvisor
 networks:
   banking-network:
     driver: bridge
