--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "4.21.1",
     "jest": "29.7.0",
     "pg": "8.13.0",
+    "prom-client": "15.1.3",
     "reflect-metadata": "0.2.2",
     "ts-jest": "29.2.5",
     "typeorm": "0.3.20",
