--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   },
   "homepage": "https://github.com/nathanwkwong/node-ts-banking#readme",
   "dependencies": {
-    "@types/jest": "29.5.13",
+    "bcrypt": "5.1.1",
     "dotenv": "16.4.5",
     "express": "4.21.1",
-    "jest": "29.7.0",
+    "jsonwebtoken": "9.0.2",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
     "pg": "8.13.0",
     "reflect-metadata": "0.2.2",
     "ts-jest": "29.2.5",
@@ -52,15 +54,20 @@
   "devDependencies": {
     "@eslint/js": "9.13.0",
     "@testcontainers/postgresql": "10.13.2",
+    "@types/bcrypt": "5.0.2",
     "@types/eslint__js": "8.42.3",
     "@types/express": "5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "22.7.5",
     "@types/pg": "8.11.10",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "6.0.2",
     "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.0.0",
     "husky": "9.1.6",
+    "jest": "^29.7.0",
     "lint-staged": "15.2.10",
     "nodemon": "3.1.7",
     "prettier": "3.3.3",
