Implement User Login authentication (Passport.js & JWT) (#7)
* feat: add login api with password and jwt auth strategy

# Conflicts:
#	package-lock.json
#	package.json

* fix: move system variable to env

* fix: introduce error codes

* fix: adjust register password schema

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DB_NAME=dev_banking
 DB_USER=user123
 DB_PASS=password
+DB_PORT=5432
+DB_HOST=localhost
+
+BCRYPT_SALT_ROUNDS=10
+JWT_SESSION_EXPIRES_IN=1h
+JWT_SECRET=some_secret
