--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc --build",
     "start": "node dist/app.js",
-    "test": "jest --silent --no-cache --config='./jest.config.ts' --forceExit",
+    "test": "jest --no-cache --config='./jest.config.ts' --forceExit",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
