--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc --build",
     "start": "node dist/app.js",
-    "test": "jest --silent --no-cache --config='./jest.config.ts' --forceExit",
+    "test": "jest --no-cache --config='./jest.config.ts' --forceExit",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/nathanwkwong/node-ts-banking#readme",
   "dependencies": {
+    "@types/passport": "1.0.17",
     "bcrypt": "5.1.1",
     "dotenv": "16.4.5",
     "express": "4.21.1",
@@ -53,21 +54,21 @@
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
+    "@faker-js/faker": "9.2.0",
     "@testcontainers/postgresql": "10.13.2",
     "@types/bcrypt": "5.0.2",
     "@types/eslint__js": "8.42.3",
     "@types/express": "5.0.0",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "29.5.14",
     "@types/node": "22.7.5",
+    "@types/passport-jwt": "4.0.1",
     "@types/pg": "8.11.10",
-    "@types/passport": "^1.0.17",
-    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "6.0.2",
     "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.0.0",
     "husky": "9.1.6",
-    "jest": "^29.7.0",
+    "jest": "29.7.0",
     "lint-staged": "15.2.10",
     "nodemon": "3.1.7",
     "prettier": "3.3.3",
