feat: add auth audit

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ DB_PORT=5432
 DB_HOST=localhost
 
 BCRYPT_SALT_ROUNDS=10
-JWT_SESSION_EXPIRES_IN=1h
+JWT_SESSION_EXPIRES_IN_SEC=300 # 5mins
 JWT_SECRET=some_secret
