--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
   },
   "homepage": "https://github.com/nathanwkwong/node-ts-banking#readme",
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
     "@types/passport": "1.0.17",
     "bcrypt": "5.1.1",
     "dotenv": "16.4.5",
     "express": "4.21.1",
     "jsonwebtoken": "9.0.2",
+    "node-cron": "^4.2.1",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "pg": "8.13.0",
